# BigInt

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  Makefile2  README.md  format.sh  lint.sh  pyproject.toml  run.sh  what.txt
.github/workflows/: cmake-single-platform.yml
BigInt/: CMakeLists.txt
BigInt/BigInt/: CMakeLists.txt
BigInt/BigInt/include/: big_int.hpp
BigInt/BigInt/src/: big_int.cpp  comparison.cpp  constructor.cpp  memory.cpp  output.cpp
BigInt/BigInt/src/arithmetic/: add_subtract.cpp  misc.cpp
BigInt/BigInt/src/arithmetic/division/: grade_school.cpp  operators.cpp
BigInt/BigInt/src/arithmetic/multiplication/: grade_school.cpp  karatsuba.cpp  operators.cpp
BigInt/BigInt/tests/: test_big_int.cpp  test_comparison.cpp  test_constructor.cpp  test_output.cpp
BigInt/BigInt/tests/arithmetic/: test_add_subtract.cpp  test_misc.cpp
BigInt/BigInt/tests/arithmetic/division/: test_division.cpp  test_remainder.cpp
BigInt/BigInt/tests/arithmetic/multiplication/: test_karatsuba.cpp  test_multiplication.cpp
BigInt/Multiplier/: CMakeLists.txt
BigInt/Multiplier/include/: multiplier.hpp
BigInt/Multiplier/src/: base_multiply.cpp  grade_school.cpp  karatsuba.cpp
BigInt/Multiplier/tests/: test_base_multiply.cpp  test_grade_school.cpp  test_multiplication_methods.cpp
BigInt/Rational/: CMakeLists.txt
BigInt/Rational/include/: rational.hpp
BigInt/Rational/src/: arithmetic.cpp  comparison.cpp  constructor.cpp  output.cpp  rational.cpp
BigInt/Rational/tests/: test_arithmetic.cpp  test_comparison.cpp  test_constructor.cpp  test_output.cpp
BigInt/SquareMatrix/: CMakeLists.txt
BigInt/SquareMatrix/include/: square_matrix.hpp
BigInt/SquareMatrix/src/: comparison.cpp  constructor.cpp  inverse.cpp  invert.cpp  multiply.cpp  output.cpp
BigInt/SquareMatrix/tests/: test_comparison.cpp  test_constructor.cpp  test_inverse.cpp  test_multiply.cpp
BigInt/include/: big_int.hpp
BigInt/src/: big_int.cpp  big_int.hpp  comparison.cpp  constructor.cpp
BigInt/src/arithmetic/: add_subtract.cpp
BigInt/src/arithmetic/division/: grade_school.cpp  operators.cpp
BigInt/src/arithmetic/multiplication/: grade_school.cpp  karatsuba.cpp  operators.cpp
BigInt/tests/: .big_int_tester.cpp.swp  .clang-tidy  big_int_tester.cpp  test_big_int.cpp  test_comparison.cpp  test_constructor.cpp  test_multiplication.cpp
BigInt/tests/arithmetic/: test_add_subtract.cpp
BigInt/tests/arithmetic/division/: test_division.cpp  test_remainder.cpp
BigInt/tests/arithmetic/multiplication/: test_karatsuba.cpp
cmake/: warnings.cmake
